--- a/.github/workflows/compile-kernel-on-a-server.yml
+++ b/.github/workflows/compile-kernel-on-a-server.yml
@@ -16,6 +16,7 @@ on:
         default: "retro98boy/unifreq-linux-6.12.y@onethingcloud"
         type: choice
         options:
+          - retro98boy/unifreq-linux-6.12.y@onethingcloud
           - unifreq
           - codesnas
       kernel_version:
