--- a/.github/workflows/compile-kernel-on-a-server.yml
+++ b/.github/workflows/compile-kernel-on-a-server.yml
@@ -152,7 +152,7 @@ jobs:
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Compile the kernel [ ${{ inputs.kernel_version }} ]
-        uses: 1qingfeng-1/amlogic-s9xxx-armbian
+        uses: 1qingfeng-1/amlogic-s9xxx-armbian@main
         if: ${{ steps.mapped.outputs.status }} == 'success' && !cancelled()
         with:
           build_target: kernel
