--- a/.github/workflows/compile-kernel-on-a-server.yml
+++ b/.github/workflows/compile-kernel-on-a-server.yml
@@ -82,10 +82,10 @@ on:
       kernel_sign:
         description: "Set the kernel custom signature"
         required: false
-        default: "-ophub"
+        default: "1qingfeng-1"
         type: choice
         options:
-          - -ophub
+          - -1qingfeng-1
           - -yourname
 
 env:
@@ -148,8 +148,8 @@ jobs:
         run: |
           df -hT ${PWD}
           mkdir -p /builder/{kernel,output}
-          ln -sf /builder/kernel /home/runner/work/amlogic-s9xxx-armbian/amlogic-s9xxx-armbian/kernel
-          ln -sf /builder/output /home/runner/work/amlogic-s9xxx-armbian/amlogic-s9xxx-armbian/compile-kernel/output
+          ln -sf /builder/kernel /home/runner/work/_actions/1qingfeng-1/amlogic-s9xxx-armbian/main/compile-kernel/kernel
+          ln -sf /builder/output /home/runner/work/_actions/1qingfeng-1/amlogic-s9xxx-armbian/main/compile-kernel/output
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Compile the kernel [ ${{ inputs.kernel_version }} ]
